<resources>
    <string name="app_name">YomicepaTask</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="wholesaler">Wholesalers:</string>
    <string name="okay">Okay</string>
    <string name="log_in">Log in</string>
    <string name="welcome_to_our_app">Welcome to our app</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="no_of_returns">No. of returns</string>
    <string name="full_service">FULL_SERVICE</string>
    <string name="express_service">EXPRESS_SERVICE</string>
    <string name="please_fill_all_the_fields">Please fill all the fields</string>
    <string name="ndc">NDC</string>
    <string name="enter_your_ndc">Enter your NDC</string>
    <string name="description">Description</string>
    <string name="enter_your_description">Enter your description</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="enter_manufacturer">Enter Manufacturer</string>
    <string name="full_quantity">Full Quantity</string>
    <string name="enter_full_quantity">Enter Full Quantity</string>
    <string name="partial_quantity">Partial Quantity</string>
    <string name="enter_partial_quantity">Enter partial quantity</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="enter_expiration_date">Enter Expiration Date</string>
    <string name="lot_number">Lot Number</string>
    <string name="enter_lot_number">Enter Lot Number</string>
    <string name="add_item">Add Item</string>
    <string name="package_size">Package Size</string>
    <string name="enter_package_size">Enter package size</string>
    <string name="request_type">Request Type</string>
    <string name="enter_request_type">Enter request type</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="status">status</string>
    <string name="enter_status">Enter Status</string>
    <string name="dosage">dosage</string>
    <string name="enter_dosage">Enter dosage</string>
    <string name="strength">strength</string>
    <string name="enter_strength">Enter Strength</string>
    <string name="go_to_items">Go to items</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="edit_item_s_description">Edit item\'s description</string>
    <string name="description_can_t_be_empty">Description can\'t be empty</string>
    <string name="my_pharmacies">My Pharmacies</string>
    <string name="add_item_to_your_return_request">Add item to your return request</string>
    <string name="items_in_return_request">Items in return request</string>
</resources>