<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.addItem.view.AddItemFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingBottom="32dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="start"
            android:text="@string/add_item_to_your_return_request"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ndc_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/ndc"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text" />

        <EditText
            android:id="@+id/ndc_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background_eight"
            android:backgroundTint="@color/secondary_color"
            android:gravity="center_vertical"
            android:hint="@string/enter_your_ndc"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/ndc_text" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/ndc_edit_text" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background_eight"
            android:backgroundTint="@color/secondary_color"
            android:gravity="center_vertical"
            android:hint="@string/enter_your_description"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/description_text" />

        <TextView
            android:id="@+id/manufacturer_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/manufacturer"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/description_edit_text" />

        <EditText
            android:id="@+id/manufacturer_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background_eight"
            android:backgroundTint="@color/secondary_color"
            android:hint="@string/enter_manufacturer"
            android:padding="12dp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/manufacturer_text" />

        <TextView
            android:id="@+id/full_quantity_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/full_quantity"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/manufacturer_edit_text" />

        <EditText
            android:id="@+id/full_quantity_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background_eight"
            android:backgroundTint="@color/secondary_color"
            android:hint="@string/enter_full_quantity"
            android:inputType="number"
            android:padding="12dp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/full_quantity_text" />

        <TextView
            android:id="@+id/partial_quantity_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/partial_quantity"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/full_quantity_edit_text" />

        <EditText
            android:id="@+id/partial_quantity_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background_eight"
            android:backgroundTint="@color/secondary_color"
            android:hint="@string/enter_partial_quantity"
            android:inputType="number"
            android:padding="12dp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/partial_quantity_text" />

        <TextView
            android:id="@+id/expiration_date_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/expiration_date"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/partial_quantity_edit_text" />

        <EditText
            android:id="@+id/expiration_date_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="16dp"
            android:padding="12dp"
            android:background="@drawable/rounded_background_eight"
            android:backgroundTint="@color/secondary_color"
            android:hint="@string/enter_expiration_date"
            android:minHeight="40dp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/expiration_date_text" />

        <TextView
            android:id="@+id/lot_number_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/lot_number"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/expiration_date_edit_text" />

        <EditText
            android:id="@+id/Lot_number_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background_eight"
            android:backgroundTint="@color/secondary_color"
            android:hint="@string/enter_lot_number"
            android:inputType="number"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/lot_number_text" />

        <TextView
            android:id="@+id/package_size_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/package_size"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/Lot_number_edit_text" />

        <EditText
            android:id="@+id/package_size_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background_eight"
            android:backgroundTint="@color/secondary_color"
            android:hint="@string/enter_package_size"
            android:inputType="number"
            android:padding="12dp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/package_size_text" />

        <TextView
            android:id="@+id/request_type_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/request_type"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/package_size_edit_text" />

        <EditText
            android:id="@+id/request_type_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background_eight"
            android:backgroundTint="@color/secondary_color"
            android:hint="@string/enter_request_type"
            android:padding="12dp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/request_type_text" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/request_type_edit_text" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background_eight"
            android:backgroundTint="@color/secondary_color"
            android:hint="@string/enter_name"
            android:padding="12dp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/name_text" />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/name_edit_text" />

        <EditText
            android:id="@+id/status_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background_eight"
            android:backgroundTint="@color/secondary_color"
            android:hint="@string/enter_status"
            android:padding="12dp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/status_text" />

        <TextView
            android:id="@+id/dosage_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/dosage"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/status_edit_text" />

        <EditText
            android:id="@+id/dosage_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background_eight"
            android:backgroundTint="@color/secondary_color"
            android:hint="@string/enter_dosage"
            android:padding="12dp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/dosage_text" />

        <TextView
            android:id="@+id/strength_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/strength"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/dosage_edit_text" />

        <EditText
            android:id="@+id/strength_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_background_eight"
            android:backgroundTint="@color/secondary_color"
            android:hint="@string/enter_strength"
            android:padding="12dp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/strength_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_background_eight"
            android:backgroundTint="@color/primary_color"
            android:text="@string/add_item"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/strength_edit_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_to_items_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_background_eight"
            android:backgroundTint="@color/secondary_color"
            android:text="@string/go_to_items"
            android:textAllCaps="false"
            android:textColor="@color/primary_color"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/ndc_text"
            app:layout_constraintStart_toStartOf="@id/ndc_text"
            app:layout_constraintTop_toBottomOf="@id/save_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
