<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.login.view.LoginFragment">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/log_in"
        android:textColor="@color/primary_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/welcome_to_our_app"
        android:textColor="@color/primary_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_login"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_background_eight"
        android:backgroundTint="@color/secondary_color"
        android:drawablePadding="8dp"
        android:hint="@string/enter_your_username"
        android:inputType="text"
        android:padding="14dp"
        android:textSize="16sp"
        app:cursorColor="@color/primary_color"
        app:layout_constraintEnd_toEndOf="@id/tv_desc"
        app:layout_constraintStart_toStartOf="@id/tv_desc"
        app:layout_constraintTop_toBottomOf="@id/tv_desc" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_background_eight"
        android:backgroundTint="@color/secondary_color"
        android:drawablePadding="8dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textDirection="locale"
        android:textSize="16sp"
        app:cursorColor="@color/primary_color"
        app:layout_constraintEnd_toEndOf="@id/tv_desc"
        app:layout_constraintStart_toStartOf="@id/tv_desc"
        app:layout_constraintTop_toBottomOf="@id/username_edit_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_background_eight"
        android:backgroundTint="@color/primary_color"
        android:gravity="center"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_desc"
        app:layout_constraintStart_toStartOf="@id/tv_desc"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>