<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.bottomSheet.createReturnRequest.view.CreateReturnRequestBottomSheet">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/express_service_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="8dp"
            android:buttonTint="@color/primary_color"
            android:text="@string/express_service"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/full_service_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="8dp"
            android:buttonTint="@color/primary_color"
            android:text="@string/full_service"
            android:textSize="16sp" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wholesalers_recycler_view"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        tools:itemCount="4"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        tools:listitem="@layout/wholesalers_item" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background_eight"
        android:backgroundTint="@color/primary_color"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/wholesalers_recycler_view"
        app:layout_constraintStart_toStartOf="@id/wholesalers_recycler_view"
        app:layout_constraintTop_toBottomOf="@id/wholesalers_recycler_view" />

</androidx.constraintlayout.widget.ConstraintLayout>